--- a/ansible/inventory/production.ini
+++ b/ansible/inventory/production.ini
@@ -1,2 +1,13 @@
 [webservers]
-ec2-instance ansible_host=52.57.166.60 ansible_user=ec2-user ansible_ssh_private_key_file=C:/path/to/your-key.pem
+# Use the private IPv4 addresses of the EC2 instances
+ec2-instance-1 ansible_host=18.185.7.95
+
+# Common Variables for All Production Servers
+[production:children]
+webservers
+
+[production:vars]
+ansible_user=ec2-user 
+ansible_ssh_private_key_file=~/.ssh/ansible-docker-deployer.pem
+ansible_ssh_common_args=-o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null
+ansible_python_interpreter=/usr/bin/python3
