--- a/ansible/playbooks/test-connection.yml
+++ b/ansible/playbooks/test-connection.yml
@@ -1,7 +1,8 @@
 ---
 - name: Test connection to EC2 production instance
   hosts: webservers
-  become: yes
+  become: true # This enables sudo privileges for all tasks in this play
+  gather_facts: false
   vars_files:
     - ../../config/ec2_config.yml
     - ../group_vars/all.yml
@@ -17,10 +18,12 @@
         name:
           - boto3
           - botocore
+          - packaging
         state: present
 
   tasks:
     - name: Gather EC2 instance information
+      become: false  # Override become at task level (so this is run as the user, not root)
       amazon.aws.ec2_instance_info:
         region: "{{ aws_region }}"
         instance_ids:
@@ -28,9 +31,11 @@
       register: ec2_info
     
     - name: Debug the instance information
+      become: false  # Override become at task level (so this is run as the user, not root)
       debug:
         msg: "Instance details: {{ ec2_info }}"
 
     - name: Debug the public IP
+      become: false  # Override become at task level (so this is run as the user, not root)
       debug:
         msg: "Public IP: {{ ec2_info.instances[0].public_ip_address }}"
