--- a/ansible/group_vars/all.yml
+++ b/ansible/group_vars/all.yml
@@ -1,14 +1,14 @@
 ---
 # Docker Image Configuration
-docker_image_name: "myapp"
-docker_image_tag: "1.0.0"                    # Use specific version instead of 'latest'
+docker_image_name: "aws_beanstalk/current-app"
+docker_image_tag: "latest"                    # Use specific version instead of 'latest'
 
 # Application Configuration
 repository_url: "https://github.com/your/repository.git"
 docker_build_context: "{{ playbook_dir }}/../../docker/"  # Path to Dockerfile location
 
 # Container Runtime Configuration
-container_name: "myapp"
+container_name: "jolly_lamport"
 container_ports:
   - "80:80"       # Host:Container port mapping
 container_env:
