--- a/config/docker_config_template.yml
+++ b/config/docker_config_template.yml
@@ -12,8 +12,8 @@ container_env:
   NODE_ENV: "production"
 
 # Resource Limits
-container_memory: "512m"
-container_cpu: "0.5"
+container_memory: "512MB"
+ontainer_cpu_shares: 512  # Value between 2-262144, where 1024 = 1 CPU core
 
 # Health Check
 health_check_interval: "30s"
